# nextdoor-podcast-discovery

./: .cursorrules  .gitignore  ARCHITECTURE.md  BUTTON.html  CARD.html  CARD_UNOPENED.html  DOM.html  FIX_SCRAPER.md  GO_LIVE.md  LARGE_FILES.md  MENU.html  MORE_CLEANUP.md  Makefile  PREVIOUS_BUTTON.html  PROJECT_PLAN.md  PR_FIXES.md  PR_REVIEW.md  PR_REVIEW_REPORT.md  README.md  RESPONSIVE_PLAN.md  TESTING_GUIDE.md  cursor_comprehensive_repository_pr_revi.md  docker-compose.yml  logs.txt
database/: README.md  bootstrap.sql
docs/: AI_SEARCH_AND_SUGGESTIONS.md  AUTH.md  AUTH0_SETUP.md  BEFORE_GO_LIVE.md  DEPLOYMENT.md  FOLLOW_UP.md  IMPROVEMENTS.md  IMPROVEMENTS_BACKFILL_EMBEDDER_STORAGE.md  LAUNCH_TASKS.md  SUPABASE_MIGRATIONS.md
scraper/: .env.example  README.md  debug_feed_header.html  pyproject.toml  requirements-dev.txt  requirements.txt
scraper/src/: __init__.py  config.py  embed.py  embedder.py  exceptions.py  llm_prompts.py  llm_scorer.py  main.py  novelty.py  post_extractor.py  post_storage.py  recount_topics.py  robots.py  scraper.py  session_manager.py  worker.py  worker_handlers.py
scraper/tests/: README.md  test_config.py  test_embed.py  test_embedder.py  test_llm_scorer.py  test_main.py  test_post_extractor.py  test_post_storage.py  test_robots.py  test_scraper.py  test_session_manager.py  test_worker.py
scripts/: generate-encryption-key.py  run-embeddings.sh  run-scrape.sh  test-supabase-connection.py
web/: .env.example  .eslintrc.json  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+194 files in other folders)
